[package]
name = "rotex-wgpu"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "A wgpu backend for rotex"

[dependencies]
raw-window-handle = "0.6"
rotex-types = { git = "https://github.com/rotexengine/rotex-types", branch = "staging" }
wgpu = { version = "29.0.3", features = ["spirv"] }

[dev-dependencies]
pollster = "0.4.0"
